--- a/应急/操作手册.md
+++ b/应急/操作手册.md
@@ -27,7 +27,7 @@ b、根据弱口令检查工具来检查弱口令。
 
 打开cmd窗口，输入`lusrmgr.msc`命令，查看是否有新增/可疑的账号，如有管理员群组的（Administrator）里的新增账号，请立即禁用或删除。
 
-![](图片/1.png)
+![](../img/win应急img/1.png)
 
 ### 3.查看服务器是否存在隐藏账号、克隆账号。
 
@@ -39,7 +39,7 @@ b、cmd输入`net user`，查看是否有陌生账号。
 
 c、使用D盾测试、它集成了对克隆账号检测的功能。
 
-![](图片/2.png)
+![](../img/win应急img/2.png)
 
 ### 4.结合日志，查看管理员登陆时间、用户名是否存在异常。
 
@@ -108,7 +108,7 @@ d、利用安全软件查看启动项、开机时间管理等。
 
 e、组策略，运行 `gpedit.msc`。
 
-![](图片/3.png)
+![](../img/win应急img/3.png)
 
 ### 2.检查计划任务
 
